fix display bug, and increase review add button on mobile

--- a/src/styles/components/ReviewList.module.scss
+++ b/src/styles/components/ReviewList.module.scss
@@ -1,4 +1,5 @@
 @import "../common/variables";
+@import "../common/mixins";
 
 .list {
    display: flex;
@@ -6,7 +7,7 @@
    align-content: center;
 
   //no review icon
-   svg {
+   & > svg {
       //center
       margin-left: auto;
       margin-right: auto;
@@ -24,6 +25,8 @@
      margin-right: auto;
      display: block;
      color: $grey-dark;
+
+     @include noselect;
     }
 
 
